--- a/tft-display-hello/Cargo.toml
+++ b/tft-display-hello/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
-edition = "2021"
+edition = "2024"
 name = "tft-display-hello"
+rust-version = "1.88"
 version = "0.1.0"
 
 [[bin]]
@@ -8,19 +9,21 @@ name = "tft-display-hello"
 path = "./src/bin/main.rs"
 
 [dependencies]
+esp-hal = { version = "1.0.0", features = ["defmt", "esp32", "unstable"] }
+
+
+defmt = "1.0.1"
+esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32"] }
+
 critical-section = "1.2.0"
-defmt = "0.3.10"
-esp-hal = { version = "1.0.0-beta.0", features = [
-    "defmt",
-    "esp32",
-    "unstable",
-] }
-esp-println = { version = "0.13.0", features = ["defmt-espflash", "esp32"] }
-embedded-hal-bus = { version = "0.1" }
+esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32"] }
+
+embedded-hal-bus = { version = "0.3" }
 display-interface-spi = "0.5"
 ili9341 = "0.6.0"
 embedded-graphics = "0.8.1"
 profont = "0.7.0"
+
 
 [profile.dev]
 # Rust debug is too slow.
